# LLM_Practice

./: README.md
0301/: README.md  main.ipynb  main.py  pyproject.toml  remind_1_4_5.py  remind_2_3.py
AGENT/modu/: README.md  agent.ipynb  pyproject.toml
AGENT/modu/chroma/: chroma.sqlite3
AGENT/teddy/: pyproject.toml
FINE-TUNING/세미나/: 0310.md
MCP/: README.md
MCP/weather/: main.py  server.py  test.py
Modu/: README.md  crawl.py  pyproject.toml
Modu/0305/: crawl.py
Modu/0306/: text2sql.ipynb
RAG/Modu/: langgraph_1.ipynb  test.py
RAG/Modu/0306/: etf_database.db
RAG/Teddy/: README.md
RAG/Teddy/Practice/: output_parser.ipynb  prompt.py
Teddy/: pyproject.toml
Teddy/20250301/: main.py
Teddy/20250303/: practice.py  sns.yaml
Teddy/20250308/pages/: main.py  pdf.py
Teddy/Practice/: README.md
Teddy/Toy_Project/PJT_01/pages/: pdf.py
Toy_Project/GPT/: README.md
Toy_Project/Hwp_spelling_check_agent/: README.md  hwp.py  main.py  pyproject.toml  train.py
Toy_Project/manual-ai/: main.ipynb  pyproject.toml
Toy_Project/manual-ai/prompt/: manual.yaml
