[tool.poetry]
name = "modu"
version = "0.1.0"
description = ""
authors = ["min <han_thesis@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crawl4ai = "^0.5.0"
nest-asyncio = "^1.6.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
langchain-google-genai = "^2.0.11"
langchain-community = "^0.3.19"
langchain-ollama = "^0.2.3"
langchain-openai = "^0.3.8"
langgraph = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
