[tool.poetry]
name = "modu"
version = "0.1.0"
description = ""
authors = ["min <han_thesis@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.3.8"
langgraph = "^0.3.5"
python-dotenv = "^1.0.1"
langfuse = "^2.59.7"
langchain-community = "^0.3.19"
langchain-chroma = "^0.2.2"
pymupdf = "^1.25.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
